[package]
name = "init"
version = "0.1.0"
authors = ["leeyu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include = { path = "../include" }
kernel = { path = "../kernel"}
mm = { path = "../mm"}
# spin = "0.5"
# lazy_static = { version = "1.4", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

